# LPCNetTorch

./: README.md  lpcnet.ipynb  pack_name.ipynb  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
lpcnet/: config.py  config_test.py  domain.py  main_inference.py  main_train.py  model.py
lpcnet/data/: corpus.py  datamodule.py  dataset.py  domain.py  transform.py  transform_test.py
lpcnet/networks/: dualfc.py  dualfc_test.py  framenet.py  network.py  samplenet.py  tree_sampling.py
lpcnet/networks/components/: diffemb.py  diffemb_test.py  dualfc.py  dualfc_test.py  linear_prediction.py  linear_prediction_test.py  mulaw.py  mulaw_test.py  nn_wrapper.py  nn_wrapper_test.py  receptive_field.py  receptive_field_test.py  tree_sampling.py  tree_sampling_test.py
pack_name/: model.py
pack_name/networks/: child.py  network.py
